--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <p>Note : Required  jQuery > 3.6</p>
         </div>
     </div>
-    <div class="card-footer text-center mt-2 text-light">Copyright 2022 <a>Muhammad Arslan</a> All Rights Reserved.</div>
+    <div class="card-footer text-center mt-2 text-light">Copyright 2022 <a href="https://arslandevpy.github.io/portfolio/">Muhammad Arslan</a> All Rights Reserved.</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
