--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bg-dark">
     <div class="col-md-8 offset-md-2 card mt-5 pb-5">
-      <h2 class="text-center p-3">DJAlert</h2>
+      <h2 class="text-center p-3">DJAlert 🚨</h2>
       <h5 class=" pt-3">A DJAlert jQuery plugin for creating notification that auto dismiss after 5 seconds.</p>
         <p>Demo.</p>
         <button class="btn btn-info" onclick="DJAlert('This is an INFO notification!', 'info')">Information Alert</button>
