--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <button class="btn btn-info" onclick="DJAlert('This is an INFO notification!', 'info')">Information Alert</button>
         <button class="btn btn-danger" onclick="DJAlert('This is an ERROR notification!', 'error')">Error Alert</button>
         <button class="btn btn-success" onclick="DJAlert('This is a SUCCESS notification!', 'success')">Success Alert</button>
-        <button class="btn btn-warning" onclick="DJAlert('This is a WARNING notification!', 'warning')">Success Alert</button>
-        <button class="btn btn-secondary" onclick="DJAlert('This is a DEBUG notification!', 'debug')">Success Alert</button>
+        <button class="btn btn-warning" onclick="DJAlert('This is a WARNING notification!', 'warning')">Warning Alert</button>
+        <button class="btn btn-secondary" onclick="DJAlert('This is a DEBUG notification!', 'debug')">Debug Alert</button>
         <button class="btn" onclick="DJAlert('This is a Null notification!',)">Null Alert</button>
         <br>
         <hr>
